--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 	<title>Night Time Diet NL – healty-vip.com</title>
 	
-<link rel="icon" href="index_files/Night Time.png" type="image/png">	
+<link rel="icon" href="./index_files/Night Time.png" type="image/png">	
 <link rel="alternate" type="application/rss+xml" title="healty-vip.com » Feed" href="https://healty-vip.com/feed/">
 <link rel="alternate" type="application/rss+xml" title="healty-vip.com » Feed dei commenti" href="https://healty-vip.com/comments/feed/">
 
