--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	
-	<title>Night Time Diet NL – healty-vip.com</title>
+	<title>Night Time Gummies Diet NL – healty-vip.com</title>
 	
 <link rel="icon" href="./index_files/Night Time.png" type="image/png">	
 <link rel="alternate" type="application/rss+xml" title="healty-vip.com » Feed" href="https://healty-vip.com/feed/">
@@ -181,7 +181,7 @@
 				<div class="elementor-element elementor-element-1e8801f6 elementor-widget elementor-widget-heading" data-id="1e8801f6" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 					<h2 class="elementor-heading-title elementor-size-default">SCHANDAAL!
-De wetenschap onthult een revolutionaire ontdekking: één enkele pil zou alles kunnen veranderen wat we denken te weten over gewichtsverlies!</h2>				</div>
+De wetenschap onthult een revolutionaire ontdekking: één enkele gummies zou alles kunnen veranderen wat we denken te weten over gewichtsverlies!</h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-3c142083 elementor-widget elementor-widget-heading" data-id="3c142083" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
@@ -202,7 +202,7 @@ De wetenschap onthult een revolutionaire ontdekking: één enkele pil zou alles 
 				</div>
 				<div class="elementor-element elementor-element-55363900 elementor-widget elementor-widget-text-editor" data-id="55363900" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p><strong>Kijk je in de spiegel en haat je wat je ziet?</strong><br><strong>Heb je je ooit gevoeld alsof je gevangen zit in je eigen lichaam, niet in staat om iets te veranderen?</strong><br><strong>Vandaag zou de laatste dag van je frustratie kunnen zijn.</strong></p><p>Er is een <strong>revolutionaire oplossing</strong> die artsen en voedingsdeskundigen in opschudding brengt. Het heet <strong>Dieta Night Time</strong> en wordt omschreven als het <strong>“wonder van gewichtsverlies” – zonder dieet en zonder beweging!</strong></p>								</div>
+									<p><strong>Kijk je in de spiegel en haat je wat je ziet?</strong><br><strong>Heb je je ooit gevoeld alsof je gevangen zit in je eigen lichaam, niet in staat om iets te veranderen?</strong><br><strong>Vandaag zou de laatste dag van je frustratie kunnen zijn.</strong></p><p>Er is een <strong>revolutionaire oplossing</strong> die artsen en voedingsdeskundigen in opschudding brengt. Het heet <strong>Dieta Night Time Gummies</strong> en wordt omschreven als het <strong>“wonder van gewichtsverlies” – zonder dieet en zonder beweging!</strong></p>								</div>
 				</div>
 					</div>
 		</div>
@@ -235,7 +235,7 @@ De wetenschap onthult een revolutionaire ontdekking: één enkele pil zou alles 
 				</div>
 				<div class="elementor-element elementor-element-1d06e000 elementor-widget elementor-widget-text-editor" data-id="1d06e000" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>Duizenden vrouwen en mannen over de hele wereld ervaren dankzij <strong>Dieta Night Time</strong> buitengewone transformaties.</p><p>Uit onderzoek blijkt dat je in slechts <strong>7 dagen tot wel 10 kg kunt afvallen</strong>, zonder ook maar iets aan je <strong>levensstijl</strong> te veranderen.</p>								</div>
+									<p>Duizenden vrouwen en mannen over de hele wereld ervaren dankzij <strong>Dieta Night Time Gummies</strong> buitengewone transformaties.</p><p>Uit onderzoek blijkt dat je in slechts <strong>7 dagen tot wel 10 kg kunt afvallen</strong>, zonder ook maar iets aan je <strong>levensstijl</strong> te veranderen.</p>								</div>
 				</div>
 				<div class="elementor-element elementor-element-6cc526ad elementor-align-center elementor-widget elementor-widget-button" data-id="6cc526ad" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
@@ -258,7 +258,7 @@ De wetenschap onthult een revolutionaire ontdekking: één enkele pil zou alles 
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-40644296 elementor-widget elementor-widget-heading" data-id="40644296" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h2 class="elementor-heading-title elementor-size-default">Hoe werkt het Nutrim-dieet?</h2>				</div>
+					<h2 class="elementor-heading-title elementor-size-default">Hoe werkt het Night Time Gummies-dieet?</h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-4c92c14b elementor-widget elementor-widget-image" data-id="4c92c14b" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
@@ -268,12 +268,12 @@ De wetenschap onthult een revolutionaire ontdekking: één enkele pil zou alles 
 				</div>
 				<div class="elementor-element elementor-element-6b20dc75 elementor-widget elementor-widget-text-editor" data-id="6b20dc75" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p><strong>Wetenschappers hebben een „superenzym“ ontdekt</strong> dat direct de vetcellen aanvalt, ze <strong>als boter in de zon laat smelten</strong> en <strong>de stofwisseling versnelt</strong>.</p><p>Deze unieke combinatie is <strong>nog nooit eerder gebruikt in een voedingssupplement</strong> op de markt.</p><p>„<strong>Het is alsof je een personal trainer en een perfect dieet combineert in één enkele pil</strong>“, legt Dr. Franz von Baader uit, een expert in klinische voeding.</p>								</div>
+									<p><strong>Wetenschappers hebben een „superenzym“ ontdekt</strong> dat direct de vetcellen aanvalt, ze <strong>als boter in de zon laat smelten</strong> en <strong>de stofwisseling versnelt</strong>.</p><p>Deze unieke combinatie is <strong>nog nooit eerder gebruikt in een voedingssupplement</strong> op de markt.</p><p>„<strong>Het is alsof je een personal trainer en een perfect dieet combineert in één enkele gummies</strong>“, legt Dr. Franz von Baader uit, een expert in klinische voeding.</p>								</div>
 				</div>
 				<div class="elementor-element elementor-element-51452689 elementor-widget elementor-widget-heading" data-id="51452689" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 					<h2 class="elementor-heading-title elementor-size-default">Grote beloftes? Ja. Gigantische resultaten? Nog groter.
-De Dieta Night Time verandert niet alleen je lichaam, maar ook je leven. Wil je weten hoe? Lees verder.</h2>				</div>
+De Dieta Night Time Gummies verandert niet alleen je lichaam, maar ook je leven. Wil je weten hoe? Lees verder.</h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-21cc260e elementor-widget elementor-widget-image" data-id="21cc260e" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
@@ -327,11 +327,11 @@ De Dieta Night Time verandert niet alleen je lichaam, maar ook je leven. Wil je 
 						<div class="elementor-element elementor-element-3bcc6fd7 elementor-widget elementor-widget-heading" data-id="3bcc6fd7" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 					<h2 class="elementor-heading-title elementor-size-default">Wij presenteren:
-Dieta Night Time – De revolutie waar vrouwen en mannen op hebben gewacht om hun lichaam te transformeren, zonder ergens op te hoeven inleveren. Ontdek nu waarom iedereen erover praat!</h2>				</div>
+Dieta Night Time Gummies – De revolutie waar vrouwen en mannen op hebben gewacht om hun lichaam te transformeren, zonder ergens op te hoeven inleveren. Ontdek nu waarom iedereen erover praat!</h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-3efda0c8 elementor-widget elementor-widget-text-editor" data-id="3efda0c8" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>De enige oplossing met <strong>„superenzymen“</strong> die vet <strong>zonder beweging of dieet</strong> laat smelten.<br><strong>Dieta Night Time</strong> helpt je om je lichaam <strong>zonder moeite</strong> te transformeren. Ontdek nu hoe het werkt!</p>								</div>
+									<p>De enige oplossing met <strong>„superenzymen“</strong> die vet <strong>zonder beweging of dieet</strong> laat smelten.<br><strong>Dieta Night Time Gummies</strong> helpt je om je lichaam <strong>zonder moeite</strong> te transformeren. Ontdek nu hoe het werkt!</p>								</div>
 				</div>
 				<div class="elementor-element elementor-element-45d3f276 elementor-widget elementor-widget-image" data-id="45d3f276" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
@@ -360,7 +360,7 @@ Dieta Night Time – De revolutie waar vrouwen en mannen op hebben gewacht om hu
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-493ce81a elementor-widget elementor-widget-heading" data-id="493ce81a" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h2 class="elementor-heading-title elementor-size-default">Hoe werkt de Dieta Night Time?
+					<h2 class="elementor-heading-title elementor-size-default">Hoe werkt de Dieta Night Time Gummies?
 
 
 
@@ -647,7 +647,7 @@ Dieta Night Time – De revolutie waar vrouwen en mannen op hebben gewacht om hu
 				</div>
 				<div class="elementor-element elementor-element-f340917 elementor-widget elementor-widget-text-editor" data-id="f340917" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p><strong>Ik kon mijn ogen niet geloven!</strong><br><strong>In slechts 9 dagen ben ik 9 kg afgevallen</strong>, zonder iets aan mijn dagelijkse routine te veranderen.<br>Dankzij <strong>Dieta Night Time</strong> werd het mogelijk!</p>								</div>
+									<p><strong>Ik kon mijn ogen niet geloven!</strong><br><strong>In slechts 9 dagen ben ik 9 kg afgevallen</strong>, zonder iets aan mijn dagelijkse routine te veranderen.<br>Dankzij <strong>Dieta Night Time Gummies</strong> werd het mogelijk!</p>								</div>
 				</div>
 					</div>
 		</div>
@@ -669,7 +669,7 @@ Dieta Night Time – De revolutie waar vrouwen en mannen op hebben gewacht om hu
 				</div>
 				<div class="elementor-element elementor-element-418ce159 elementor-widget elementor-widget-text-editor" data-id="418ce159" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p><strong>Ik dacht dat het weer een oplichterij was, maar ik had het mis!</strong><br><strong>Ik ben 8 kg afgevallen in slechts één week</strong> en voel me energieker dan ik me in jaren heb gevoeld!<br>Dankzij <strong>Dieta Night Time.</strong></p>								</div>
+									<p><strong>Ik dacht dat het weer een oplichterij was, maar ik had het mis!</strong><br><strong>Ik ben 8 kg afgevallen in slechts één week</strong> en voel me energieker dan ik me in jaren heb gevoeld!<br>Dankzij <strong>Dieta Night Time Gummies.</strong></p>								</div>
 				</div>
 					</div>
 		</div>
@@ -691,7 +691,7 @@ Dieta Night Time – De revolutie waar vrouwen en mannen op hebben gewacht om hu
 				</div>
 				<div class="elementor-element elementor-element-6ca642c7 elementor-widget elementor-widget-text-editor" data-id="6ca642c7" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p><strong>Eindelijk iets dat echt werkt!</strong><br><strong>De jeans die jarenlang niet paste, zit nu losjes.</strong> Ik raad het iedereen aan!<br>Dankzij <strong>Dieta Night Time</strong> is de verandering mogelijk.</p>								</div>
+									<p><strong>Eindelijk iets dat echt werkt!</strong><br><strong>De jeans die jarenlang niet paste, zit nu losjes.</strong> Ik raad het iedereen aan!<br>Dankzij <strong>Dieta Night Time Gummies</strong> is de verandering mogelijk.</p>								</div>
 				</div>
 				<div class="elementor-element elementor-element-3ae8e1eb elementor-align-center elementor-widget elementor-widget-button" data-id="3ae8e1eb" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
