--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 				<div class="elementor-element elementor-element-1e8801f6 elementor-widget elementor-widget-heading" data-id="1e8801f6" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 					<h2 class="elementor-heading-title elementor-size-default">SCHANDAAL!
-De wetenschap onthult een revolutionaire ontdekking: één enkele gummies zou alles kunnen veranderen wat we denken te weten over gewichtsverlies!</h2>				</div>
+De wetenschap onthult een revolutionaire ontdekking: één enkele gummy zou alles kunnen veranderen wat we denken te weten over gewichtsverlies!</h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-3c142083 elementor-widget elementor-widget-heading" data-id="3c142083" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
@@ -268,7 +268,7 @@ De wetenschap onthult een revolutionaire ontdekking: één enkele gummies zou al
 				</div>
 				<div class="elementor-element elementor-element-6b20dc75 elementor-widget elementor-widget-text-editor" data-id="6b20dc75" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p><strong>Wetenschappers hebben een „superenzym“ ontdekt</strong> dat direct de vetcellen aanvalt, ze <strong>als boter in de zon laat smelten</strong> en <strong>de stofwisseling versnelt</strong>.</p><p>Deze unieke combinatie is <strong>nog nooit eerder gebruikt in een voedingssupplement</strong> op de markt.</p><p>„<strong>Het is alsof je een personal trainer en een perfect dieet combineert in één enkele gummies</strong>“, legt Dr. Franz von Baader uit, een expert in klinische voeding.</p>								</div>
+									<p><strong>Wetenschappers hebben een „superenzym“ ontdekt</strong> dat direct de vetcellen aanvalt, ze <strong>als boter in de zon laat smelten</strong> en <strong>de stofwisseling versnelt</strong>.</p><p>Deze unieke combinatie is <strong>nog nooit eerder gebruikt in een voedingssupplement</strong> op de markt.</p><p>„<strong>Het is alsof je een personal trainer en een perfect dieet combineert in één enkele gummy</strong>“, legt Dr. Franz von Baader uit, een expert in klinische voeding.</p>								</div>
 				</div>
 				<div class="elementor-element elementor-element-51452689 elementor-widget elementor-widget-heading" data-id="51452689" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
